data/elastic-cloud-on-k8s-operator/v2-14-0/aux-examples-bkup.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: istio-apps
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigning-issuer
    kubernetes.io/ingress.allow-http: 'false'
  labels:
    app: hulk
  name: hulk
spec:
  rules:
  - host: elasticsearch.hulk
    http:
      paths:
      - backend:
          service:
            name: hulk-es-http
            port:
              name: https
        path: /*
        pathType: Exact
  - host: kibana.hulk
    http:
      paths:
      - backend:
          service:
            name: hulk-kb-http
            port:
              name: https
        path: /*
        pathType: Exact
  tls:
  - hosts:
    - elasticsearch.hulk
    secretName: hulk-elasticsearch-cert
  - hosts:
    - kibana.hulk
    secretName: hulk-kibana-cert
